--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,10 @@ a {
 
 .logo {
   color: var(--IRIS, #4d5ae5);
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-weight: 700;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.54px;
   text-transform: uppercase;
 }
@@ -32,8 +32,13 @@ a {
   letter-spacing: 0.32px;
 }
 
-.link:hover {
+.link:hover,
+.link:focus {
   color: var(--OCEAN, #404bbf);
+}
+
+.adress {
+  font-style: normal;
 }
 
 .contacts {
@@ -44,7 +49,8 @@ a {
   letter-spacing: 0.32px;
 }
 
-.contacts:hover {
+.contacts:hover,
+.contacts:focus {
   color: var(--OCEAN, #404bbf);
 }
 
@@ -115,6 +121,12 @@ a {
   letter-spacing: 0.32px;
 }
 
+/* Our team */
+
+.background {
+  background-color: #ffffff;
+}
+
 .heading {
   color: var(--NAVY-BLUE, #2e2f42);
   text-align: center;
@@ -149,6 +161,8 @@ a {
   letter-spacing: 0.32px;
 }
 
+/* Our portfolio */
+
 .portfolio-headings {
   color: var(--NAVY-BLUE, #2e2f42);
   font-family: Roboto;
@@ -166,16 +180,18 @@ a {
   letter-spacing: 0.32px;
 }
 
-footer {
+/* Footer */
+
+.footer {
   background: var(--NAVY-BLUE, #2e2f42);
 }
 
 .logo-part-variant {
   color: var(--CLOUD, #f4f4fd);
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-weight: 700;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.54px;
   text-transform: uppercase;
 }
