add index.html and css

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,7 @@ a {
 
 /* Features */
 
-.visually-hidden {
+/* .visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -101,7 +101,7 @@ a {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
-}
+} */
 
 .features {
   color: var(--NAVY-BLUE, #2e2f42);
