--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif, "Raleway", sans-serif;
   color: #434455;
   background: #fff;
 }
